docs: rescope README and reference docs to the claims-controlled 0.1.0 release
Replace the unverified latency/scale/cost/SOTA narrative and the dead benchmark
CSV link with the single-process CPU scope: the 15-artifact publication
allowlist, the committed JMH SIMD baseline (~4.4-6.8x) and recall-gate evidence,
the incubating Vector API and single-process boundaries, and an honest
positioning against JVector and Lucene. Feature capabilities (indexes,
quantizers, adapters, persistence) are retained.